@@ -491,6 +491,140 @@
                         </group>
 
 			<!-- SNMP Informant MIBs -->
+                        <group  name="snmpinformant-cpu" ifType="ignore">
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.2.1" instance="48" alias="sinfCpuPtDPCTime0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.3.1" instance="48" alias="sinfCpuPtIntTime0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.4.1" instance="48" alias="sinfCpuPtPrivTime0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.5.1" instance="48" alias="sinfCpuPtProcTime0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.6.1" instance="48" alias="sinfCpuPtUserTime0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.7.1" instance="48" alias="sinfCpuAPCBypPSec0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.8.1" instance="48" alias="sinfCpuDPCBypPSec0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.9.1" instance="48" alias="sinfCpuDPCRate0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.10.1" instance="48" alias="sinfCpuDPCsQPSec0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.11.1" instance="48" alias="sinfCpuIntPSec0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.2.1" instance="49" alias="sinfCpuPtDPCTime1" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.3.1" instance="49" alias="sinfCpuPtIntTime1" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.4.1" instance="49" alias="sinfCpuPtPrivTime1" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.5.1" instance="49" alias="sinfCpuPtProcTime1" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.6.1" instance="49" alias="sinfCpuPtUserTime1" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.7.1" instance="49" alias="sinfCpuAPCBypPSec1" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.8.1" instance="49" alias="sinfCpuDPCBypPSec1" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.9.1" instance="49" alias="sinfCpuDPCRate1" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.10.1" instance="49" alias="sinfCpuDPCsQPSec1" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.11.1" instance="49" alias="sinfCpuIntPSec1" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.2.1" instance="50" alias="sinfCpuPtDPCTime2" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.3.1" instance="50" alias="sinfCpuPtIntTime2" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.4.1" instance="50" alias="sinfCpuPtPrivTime2" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.5.1" instance="50" alias="sinfCpuPtProcTime2" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.6.1" instance="50" alias="sinfCpuPtUserTime2" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.7.1" instance="50" alias="sinfCpuAPCBypPSec2" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.8.1" instance="50" alias="sinfCpuDPCBypPSec2" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.9.1" instance="50" alias="sinfCpuDPCRate2" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.10.1" instance="50" alias="sinfCpuDPCsQPSec2" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.11.1" instance="50" alias="sinfCpuIntPSec2" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.2.1" instance="51" alias="sinfCpuPtDPCTime3" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.3.1" instance="51" alias="sinfCpuPtIntTime3" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.4.1" instance="51" alias="sinfCpuPtPrivTime3" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.5.1" instance="51" alias="sinfCpuPtProcTime3" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.6.1" instance="51" alias="sinfCpuPtUserTime3" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.7.1" instance="51" alias="sinfCpuAPCBypPSec3" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.8.1" instance="51" alias="sinfCpuDPCBypPSec3" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.9.1" instance="51" alias="sinfCpuDPCRate3" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.10.1" instance="51" alias="sinfCpuDPCsQPSec3" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.11.1" instance="51" alias="sinfCpuIntPSec3" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.2.6.95.84.111.116.97" instance="108" alias="sinfCpuPtDPCTime0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.3.6.95.84.111.116.97" instance="108" alias="sinfCpuPtIntTime0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.4.6.95.84.111.116.97" instance="108" alias="sinfCpuPtPrivTime0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.5.6.95.84.111.116.97" instance="108" alias="sinfCpuPtProcTime0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.6.6.95.84.111.116.97" instance="108" alias="sinfCpuPtUserTime0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.7.6.95.84.111.116.97" instance="108" alias="sinfCpuAPCBypPSec0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.8.6.95.84.111.116.97" instance="108" alias="sinfCpuDPCBypPSec0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.9.6.95.84.111.116.97" instance="108" alias="sinfCpuDPCRate0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.10.6.95.84.111.116.97" instance="108" alias="sinfCpuDPCsQPSec0" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.5.1.11.6.95.84.111.116.97" instance="108" alias="sinfCpuIntPSec0" type="Gauge32" />
+			</group>
+                        <group  name="snmpinformant-disk" ifType="ignore">
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.2.2.67" instance="58" alias="sinfDskPtReadTimeC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.3.2.67" instance="58" alias="sinfDskPtDiskTimeC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.4.2.67" instance="58" alias="sinfDskPtWrtTimeC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.5.2.67" instance="58" alias="sinfDskPtFreeSpcC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.6.2.67" instance="58" alias="sinfDskPtIdleTimeC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.7.2.67" instance="58" alias="sinfDskAvgQLgthC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.8.2.67" instance="58" alias="sinfDskAvgRdQLgthC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.9.2.67" instance="58" alias="sinfDskAvgWtQLgthC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.10.2.67" instance="58" alias="sinfDskAvgSecRdC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.11.2.67" instance="58" alias="sinfDskAvgSecTranC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.12.2.67" instance="58" alias="sinfDskAvgSecWtC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.13.2.67" instance="58" alias="sinfDskCurrQLgthC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.14.2.67" instance="58" alias="sinfDskBytesSecC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.15.2.67" instance="58" alias="sinfDskRdByteSecC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.16.2.67" instance="58" alias="sinfDskRdsSecC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.17.2.67" instance="58" alias="sinfDskTransSecC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.18.2.67" instance="58" alias="sinfDskWtByteSecC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.19.2.67" instance="58" alias="sinfDskWtsPerSecC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.20.2.67" instance="58" alias="sinfDskFreeMBC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.21.2.67" instance="58" alias="sinfDskSplitIOSecC" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.2.2.68" instance="58" alias="sinfDskPtReadTimeD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.3.2.68" instance="58" alias="sinfDskPtDiskTimeD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.4.2.68" instance="58" alias="sinfDskPtWrtTimeD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.5.2.68" instance="58" alias="sinfDskPtFreeSpcD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.6.2.68" instance="58" alias="sinfDskPtIdleTimeD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.7.2.68" instance="58" alias="sinfDskAvgQLgthD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.8.2.68" instance="58" alias="sinfDskAvgRdQLgthD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.9.2.68" instance="58" alias="sinfDskAvgWtQLgthD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.10.2.68" instance="58" alias="sinfDskAvgSecRdD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.11.2.68" instance="58" alias="sinfDskAvgSecTranD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.12.2.68" instance="58" alias="sinfDskAvgSecWtD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.13.2.68" instance="58" alias="sinfDskCurrQLgthD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.14.2.68" instance="58" alias="sinfDskBytesSecD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.15.2.68" instance="58" alias="sinfDskRdByteSecD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.16.2.68" instance="58" alias="sinfDskRdsSecD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.17.2.68" instance="58" alias="sinfDskTransSecD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.18.2.68" instance="58" alias="sinfDskWtByteSecD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.19.2.68" instance="58" alias="sinfDskWtsPerSecD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.20.2.68" instance="58" alias="sinfDskFreeMBD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.21.2.68" instance="58" alias="sinfDskSplitIOSecD" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.2.2.69" instance="58" alias="sinfDskPtReadTimeE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.3.2.69" instance="58" alias="sinfDskPtDiskTimeE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.4.2.69" instance="58" alias="sinfDskPtWrtTimeE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.5.2.69" instance="58" alias="sinfDskPtFreeSpcE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.6.2.69" instance="58" alias="sinfDskPtIdleTimeE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.7.2.69" instance="58" alias="sinfDskAvgQLgthE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.8.2.69" instance="58" alias="sinfDskAvgRdQLgthE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.9.2.69" instance="58" alias="sinfDskAvgWtQLgthE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.10.2.69" instance="58" alias="sinfDskAvgSecRdE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.11.2.69" instance="58" alias="sinfDskAvgSecTranE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.12.2.69" instance="58" alias="sinfDskAvgSecWtE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.13.2.69" instance="58" alias="sinfDskCurrQLgthE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.14.2.69" instance="58" alias="sinfDskBytesSecE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.15.2.69" instance="58" alias="sinfDskRdByteSecE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.16.2.69" instance="58" alias="sinfDskRdsSecE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.17.2.69" instance="58" alias="sinfDskTransSecE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.18.2.69" instance="58" alias="sinfDskWtByteSecE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.19.2.69" instance="58" alias="sinfDskWtsPerSecE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.20.2.69" instance="58" alias="sinfDskFreeMBE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.21.2.69" instance="58" alias="sinfDskSplitIOSecE" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.2.6.95.84.111.116.97" instance="58" alias="sinfDskPtReadTimeTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.3.6.95.84.111.116.97" instance="58" alias="sinfDskPtDiskTimeTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.4.6.95.84.111.116.97" instance="58" alias="sinfDskPtWrtTimeTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.5.6.95.84.111.116.97" instance="58" alias="sinfDskPtFreeSpcTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.6.6.95.84.111.116.97" instance="58" alias="sinfDskPtIdleTimeTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.7.6.95.84.111.116.97" instance="58" alias="sinfDskAvgQLgthTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.8.6.95.84.111.116.97" instance="58" alias="sinfDskAvgRdQLgthTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.9.6.95.84.111.116.97" instance="58" alias="sinfDskAvgWtQLgthTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.10.6.95.84.111.116.97" instance="58" alias="sinfDskAvgSecRdTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.11.6.95.84.111.116.97" instance="58" alias="sinfDskAvgSecTranTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.12.6.95.84.111.116.97" instance="58" alias="sinfDskAvgSecWtTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.13.6.95.84.111.116.97" instance="58" alias="sinfDskCurrQLgthTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.14.6.95.84.111.116.97" instance="58" alias="sinfDskBytesSecTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.15.6.95.84.111.116.97" instance="58" alias="sinfDskRdByteSecTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.16.6.95.84.111.116.97" instance="58" alias="sinfDskRdsSecTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.17.6.95.84.111.116.97" instance="58" alias="sinfDskTransSecTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.18.6.95.84.111.116.97" instance="58" alias="sinfDskWtByteSecTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.19.6.95.84.111.116.97" instance="58" alias="sinfDskWtsPerSecTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.20.6.95.84.111.116.97" instance="58" alias="sinfDskFreeMBTl" type="Gauge32" />
+				<mibObj oid=".1.3.6.1.4.1.9600.1.1.1.1.21.6.95.84.111.116.97" instance="58" alias="sinfDskSplitIOSecTl" type="Gauge32" />
+                        </group>
                         <group  name="snmpinformant-memory" ifType="ignore">
                                 <mibObj oid=".1.3.6.1.4.1.9600.1.1.2.3" instance="0" alias="sinfMemAvailMB" type="Gauge" />
                                 <mibObj oid=".1.3.6.1.4.1.9600.1.1.2.4" instance="0" alias="sinfMemComBytes" type="Gauge" />
@@ -649,6 +783,8 @@
 					<includeGroup>compaq-insight-manager-stats</includeGroup>
 					<includeGroup>domino-stats</includeGroup>
                                         <includeGroup>microsoft-http</includeGroup>
+                                        <includeGroup>snmpinformant-cpu</includeGroup>
+                                        <includeGroup>snmpinformant-disk</includeGroup>
                                         <includeGroup>snmpinformant-memory</includeGroup>
                                         <includeGroup>snmpinformant-processes</includeGroup>
 					<includeGroup>windows-host</includeGroup>
