@@ -66,6 +66,7 @@ nortel.kernelmem, nortel.kerneltasks, \
 novell.cacheBuffers, novell.codeDataMemory, novell.diskSpaceSys, \
 novell.diskSpaceVol2, novell.licensedConnections, novell.numberOfNLMsLoaded, novell.openFiles, \
 sinf.availmem, sinf.mempool, sinf.paging, sinf.processes, sinf.sysmem, \
+sinf.diskfreeC, sinf.diskfreeD, sinf.diskfreeE, sinf.diskfreetotal, \
 sun.cpuTime, sun.diskxfer, sun.interrupts, sun.packets, sun.paging, sun.procs, \
 sun.swap, sun.swapping, \
 netsnmp.memStats, \
@@ -2040,6 +2041,46 @@ report.sinf.availmem.command=--title="Windows Available Memory (SNMP-Informant)"
  GPRINT:availmem:AVERAGE:"Avg \\: %10.2lf %s" \
  GPRINT:availmem:MIN:"Min \\: %10.2lf %s" \
  GPRINT:availmem:MAX:"Max \\: %10.2lf %s\\n"
+
+report.sinf.diskfreeC.name=Available Disk Space (Drive C) (SNMP-Inf)
+report.sinf.diskfreeC.columns=sinfDskPtFreeSpcC
+report.sinf.diskfreeC.type=node
+report.sinf.diskfreeC.command=--title="Windows Available Space Disk Drive C (SNMP-Informant)" \
+ DEF:availspace={rrd1}:sinfDskPtFreeSpcC:AVERAGE \
+ LINE2:availspace#ff0000:"% Avail." \
+ GPRINT:availspace:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:availspace:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:availspace:MAX:"Max \\: %10.2lf %s\\n"
+
+report.sinf.diskfreeD.name=Available Disk Space (Drive D) (SNMP-Inf)
+report.sinf.diskfreeD.columns=sinfDskPtFreeSpcC
+report.sinf.diskfreeD.type=node
+report.sinf.diskfreeD.command=--title="Windows Available Space Disk Drive D (SNMP-Informant)" \
+ DEF:availspace={rrd1}:sinfDskPtFreeSpcD:AVERAGE \
+ LINE2:availspace#ff0000:"% Avail." \
+ GPRINT:availspace:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:availspace:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:availspace:MAX:"Max \\: %10.2lf %s\\n"
+
+report.sinf.diskfreeE.name=Available Disk Space (Drive E) (SNMP-Inf)
+report.sinf.diskfreeE.columns=sinfDskPtFreeSpcC
+report.sinf.diskfreeE.type=node
+report.sinf.diskfreeE.command=--title="Windows Available Space Disk Drive C (SNMP-Informant)" \
+ DEF:availspace={rrd1}:sinfDskPtFreeSpcE:AVERAGE \
+ LINE2:availspace#ff0000:"% Avail." \
+ GPRINT:availspace:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:availspace:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:availspace:MAX:"Max \\: %10.2lf %s\\n"
+
+report.sinf.diskfreetotal.name=Available Disk Space (SNMP-Inf)
+report.sinf.diskfreetotal.columns=sinfDskPtFreeSpcTl
+report.sinf.diskfreetotal.type=node
+report.sinf.diskfreetotal.command=--title="Windows Available Total Disk Space (SNMP-Informant)" \
+ DEF:availspace={rrd1}:sinfDskPtFreeSpcTl:AVERAGE \
+ LINE2:availspace#ff0000:"% Avail." \
+ GPRINT:availspace:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:availspace:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:availspace:MAX:"Max \\: %10.2lf %s\\n"
 
 report.sinf.mempool.name=Memory Pool (SNMP-Inf)
 report.sinf.mempool.columns=sinfMemPNonpagedByt, sinfMemPPagedBytes, sinfMemPPagedResByt
